2006-04-26  Dave Airlie <airlied@linux.ie>

	* hw/xfree86/os-support/bus/Pci.c: (pciSetOSBIOSPtr),
	(HandlePciBios):
	* hw/xfree86/os-support/bus/Pci.h:
	* hw/xfree86/os-support/bus/linuxPci.c: (linuxPciInit),
	(linuxPciHandleBIOS):
	Bug #6751: Use the Linux PCI ROM interface on Linux properly
	The old domain code, still modified BARs not a good idea,
	Just talk to sysfs, if 0 read, fallback to old methods.

2006-04-26  Dave Airlie <airlied@linux.ie>

	* hw/xfree86/common/xf86pciBus.c:
	* hw/xfree86/os-support/shared/stdResource.c:
	(xf86StdAccResFromOS):
	Bug #6750: This patch detects Intel bridges that are transparent
	but aren't reported as such. From the Linux kernel fixups.
	This patch also removes the reserved BIOS area from the
	area to allocate resources in.

2006-04-25  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa_migration.c: (exaPixmapSave), (exaMoveInPixmap),
	(exaMoveOutPixmap):
	Improve the migration debugging output.

2006-04-25  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa_render.c: (exaGlyphsIntersect):
	Fix a bug in the intersection computation that could concievably cause
	incorrect results to be returned (but would probably usually be
	over-conservative).

2006-04-25  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa_render.c: (exaGlyphsIntersect), (exaGlyphs):
	Bug #4668: Check if the lists of glyphs don't have any intersecting
	glyphs, and if they all have a maskFormat matching the format of the
	actual glyphs  If so, we can avoid the temporary pixmap for accumulating
	glyphs, which reduces the number of operations done, and makes it easier
	on the migration system.  This fixes some significant performance
	issues, particularly with subpixel antialiasing.  Note that it does
	increase the amount of damage computation which is done, so is not
	always a win with a compositing manager running.

2006-04-25  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa_migration.c: (exaAssertNotDirty), (exaDoMigration):
	* exa/exa_priv.h: